--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">jest</string>
-    <string name="go">Laugh it up fuzzball...</string>
+    <string name="go">Laugh it up fuzzball…</string>
     <string name="tag_line">noun. A playful remark; a witticism or joke</string>
     <string name="instructions">Push the button below to commence hilarity!</string>
-    <string name="retreiving">Preparing jest. (Brace yourself!)</string>
+    <string name="retrieving">Preparing jest. (Brace yourself!)</string>
+    <string name="error_network">Oops! Looks like we can\'t access the internet. Please check your
+                                    connection.</string>
+    <string name="error_api">Doh! We can\'t access the server right now. Please try later.</string>
+    <string name="error_general">Yikes! Something went wrong.</string>
     <string name="button_text">Tell Joke</string>
     <string name="action_settings">Settings</string>
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
